--- a/dating/src/main/resources/application.properties
+++ b/dating/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.mvc.locale=fr
 spring.mvc.locale-resolver=fixed
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.messages.basename=messages
 spring.messages.fallback-to-system-locale=true
